--- a/oe_kemoxon_delivery_custom/views/account_move_views.xml
+++ b/oe_kemoxon_delivery_custom/views/account_move_views.xml
@@ -43,6 +43,7 @@
                     <field name="delivery_from"/>
                     <field name="delivery_to"/>
                     <field name="fusion_reference"/>
+                     <field name="posted_before"/>
                 </xpath>
 
                 <xpath expr="//field[@name='partner_id']" position="attributes">
