Added posted_before field again in account move

--- a/oe_kemoxon_delivery_custom/views/account_move_views.xml
+++ b/oe_kemoxon_delivery_custom/views/account_move_views.xml
@@ -42,6 +42,7 @@
                     <field name="show_delivery_to"/>
                     <field name="delivery_from"/>
                     <field name="delivery_to"/>
+                    <field name="posted_before"/>
                 </xpath>
 
                 <xpath expr="//field[@name='partner_id']" position="attributes">
