Added fusion_invoice_ref field in account move fusion info tab

--- a/oe_kemoxon_delivery_custom/views/account_move_views.xml
+++ b/oe_kemoxon_delivery_custom/views/account_move_views.xml
@@ -53,6 +53,7 @@
                         <group string="Fusion Fields" name="fusion_group">
                             <group>
                                 <field name="fusion_reference"/>
+                                <field name="fusion_invoice_ref"/>
                                 <field name="fusion_contract_ref"/>
                                 <field name="fusion_location"/>
                                 <field name="fusion_trader"/>
