For Cusstomer Bank added UserError validation in invoices and proforma invoices, the contact approval button and the invoice action post button.

--- a/kemexon_formula_pricing/reports/invoice_report_template_inherited.xml
+++ b/kemexon_formula_pricing/reports/invoice_report_template_inherited.xml
@@ -701,6 +701,14 @@
                     </t>
                 </ul>
                 <!--                <hr style="height:3px; border:none; background-color:black;"/>-->
+                <t t-if="not o.company_bank_account_id">
+                    <div class="alert alert-danger">
+                        <strong>Error!</strong>
+                        Bank is not selected for this customer. Please select a bank for the customer before printing
+                        the
+                        invoice.
+                    </div>
+                </t>
             </t>
         </xpath>
     </template>
