added field fusion_payment_term into fusion tab

--- a/oe_kemoxon_delivery_custom/views/account_move_views.xml
+++ b/oe_kemoxon_delivery_custom/views/account_move_views.xml
@@ -69,6 +69,7 @@
                                 <field name="fusion_imo"/>
                                 <field name="fusion_vessel_name"/>
                                 <field name="fusion_deal_ref"/>
+                                <field name="fusion_payment_term"/>
                             </group>
                         </group>
                     </page>
