--- a/kemexon_formula_pricing/reports/invoice_report_template_inherited.xml
+++ b/kemexon_formula_pricing/reports/invoice_report_template_inherited.xml
@@ -138,6 +138,7 @@
                                 <span>Premium</span>
                             </th>
                         </t>
+
                         <th name="th_priceunit"
                             t-attf-class="text-end {{ 'd-none d-md-table-cell' if report_type == 'html' else '' }}">
                             <span>Rate</span>
@@ -213,6 +214,7 @@
                                         <span></span>
                                     </t>
                                 </td>
+
                                 <td t-if="display_discount"
                                     t-attf-class="text-end {{ 'd-none d-md-table-cell' if report_type == 'html' else '' }}">
                                     <t t-if="line.product_id.name != 'Down payment'">
@@ -259,9 +261,50 @@
 
 
                     </t>
+                    <t t-if="o.amount_tax >0">
+                         <tr style="border-bottom:2px solid #d4d6d9">
+                         <td name="td_section_subtotal" >
+                        </td>
 
+                               <td name="td_section_subtotal" >
+                        </td>
+                        <td name="td_section_subtotal" class="text-end">
+                            <strong class="mr16">Amount without tax (<span t-field="o.currency_id"/>)
+                            </strong>
+
+                        </td>
+                        <td colspan="99" class="is-subtotal text-end">
+                            <span style="text-align:right;" class="m-0" t-field="o.amount_untaxed"/>
+                        </td>
+                         </tr>
+                        <t  t-foreach="o.line_ids" t-as="line">
+<t t-if="line.display_type=='tax'">
+      <tr style="border-bottom:2px solid #d4d6d9">
+                                 <td name="td_section_subtotal_tax" >
+                                </td>
+
+                                       <td name="td_section_subtotal_tax" >
+                                </td>
+                                <td name="td_section_subtotal_tax" class="text-end">
+                                    <strong class="mr16">Tax <span t-esc="round(line.balance/line.tax_base_amount *-100,2)"/> %
+                                    </strong>
+
+                                </td>
+                                <td colspan="99" class="is-subtotal text-end">
+                                    <span style="text-align:right;" class="m-0" t-esc="line.balance*-1"/> <span t-field="o.currency_id.symbol"/>
+                                </td>
+                            </tr>
+</t>
+
+                    </t>
+                </t>
                     <tr style="border-bottom:2px solid #d4d6d9">
-                        <td name="td_section_subtotal">
+                         <td name="td_section_subtotal" >
+                        </td>
+
+                               <td name="td_section_subtotal" >
+                        </td>
+                        <td name="td_section_subtotal" class="text-end">
                             <strong class="mr16">Total (<span t-field="o.currency_id"/>)
                             </strong>
 
