--- a/kemexon_formula_pricing/reports/invoice_report_template_inherited.xml
+++ b/kemexon_formula_pricing/reports/invoice_report_template_inherited.xml
@@ -291,7 +291,7 @@
 
                                 </td>
                                 <td colspan="99" class="is-subtotal text-end">
-                                    <span style="text-align:right;" class="m-0" t-esc="line.balance*-1"/> <span t-field="o.currency_id.symbol"/>
+                                    <span style="text-align:right;" class="m-0" t-esc="line.balance*-1" t-options="{'widget': 'monetary', 'display_currency': o.currency_id}"/>
                                 </td>
                             </tr>
 </t>
