--- a/fendahl_interface/views/trade_controller.xml
+++ b/fendahl_interface/views/trade_controller.xml
@@ -18,9 +18,9 @@
             <field name="model">trade.controller.bi</field>
             <field name="arch" type="xml">
                 <tree string="Estimate">
-                    <field name="deal_master_id"/>
-                     <field name="segment_id"/>
-                     <field name="reference_number"/>
+                    <field name="dealmasterid"/>
+                     <field name="segmentid"/>
+                     <field name="referencenumber"/>
                 </tree>
             </field>
          </record>
@@ -35,6 +35,16 @@
               <p class="o_view_nocontent_smiling_face">
                 Fusion Trade Controller
               </p>
+            </field>
+        </record>
+        <record id="model_fusion_trade_controller_create_po" model="ir.actions.server">
+            <field name="name">Create PO</field>
+            <field name="model_id" ref="model_trade_controller_bi"/>
+            <field name="binding_model_id" ref="model_trade_controller_bi"/>
+            <field name="binding_view_types">tree,form</field>
+            <field name="state">code</field>
+            <field name="code">
+                action = env['trade.controller.bi'].create_purchase_order()
             </field>
         </record>
           <menuitem id="menu_fusion_Trades"
