--- a/fendahl_interface/views/nomination_controller.xml
+++ b/fendahl_interface/views/nomination_controller.xml
@@ -7,8 +7,8 @@
             <field name="model">nomination.controller.bi</field>
             <field name="arch" type="xml">
                 <tree string="Estimate">
-                    <field name="itinerary_id"/>
-                     <field name="itinerary_name"/>
+                    <field name="itineraryid"/>
+                     <field name="itineraryname"/>
                 </tree>
             </field>
          </record>
