--- a/fendahl_interface/views/fusion_sync_history.xml
+++ b/fendahl_interface/views/fusion_sync_history.xml
@@ -53,7 +53,7 @@
             <field name="binding_view_types">tree,form</field>
             <field name="state">code</field>
             <field name="code">
-                action = env['transfer.controller.bi'].import_nomination()
+                action = env['transfer.controller.bi'].import_transfer()
             </field>
         </record>
          <record id="model_fusion_sync_history_action_trigger_sync_trade" model="ir.actions.server">
@@ -76,11 +76,27 @@
                 action = env['invoice.controller.bi'].import_invoice()
             </field>
         </record>
+
+
           <menuitem id="menu_fusion_sync_history"
               name="Fusion Sync History Controller"
               action="action_fusion_sync_history"
               parent="account.menu_finance_receivables"
               sequence="115"/>
     </data>
+    <data noupdate="1">  <!-- noupdate="1" means it won't be updated automatically at module updates -->
+        <record id="cron_import_invoices" model="ir.cron">
+            <field name="name">Import Transactions</field>
+            <field name="active" eval="True"/>
+            <field name="user_id" ref="base.user_root"/>  <!-- Executes as Superuser -->
+            <field name="interval_number">1</field>
+            <field name="interval_type">hours</field>
+            <field name="numbercall">-1</field>  <!-- -1 for indefinite repetitions -->
+            <field name="doall" eval="False"/>  <!-- False means do not run all missed if server stops -->
+            <field name="model_id" ref="model_fusion_sync_history"/>
+            <field name="code">model.sync_all()</field>
+        </record>
+    </data>
+
 
 </odoo>
