--- a/fendahl_interface/views/invoice_controller.xml
+++ b/fendahl_interface/views/invoice_controller.xml
@@ -24,6 +24,16 @@
               </p>
             </field>
         </record>
+         <record id="model_fusion_trade_controller_create_bill" model="ir.actions.server">
+            <field name="name">Create Bill</field>
+            <field name="model_id" ref="model_invoice_controller_bi"/>
+            <field name="binding_model_id" ref="model_invoice_controller_bi"/>
+            <field name="binding_view_types">tree,form</field>
+            <field name="state">code</field>
+            <field name="code">
+                action = records.create_bill()
+            </field>
+        </record>
           <menuitem id="menu_fusion_Invoice"
               name="Fusion Invoice Controller"
               action="action_fusion_invoice_controller"
